--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@types/electron-store": "^1.3.1",
+    "electron-store": "^10.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^5.0.1"
   }
 }
