--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@types/electron-store": "^1.3.1",
+    "dotenv": "^16.5.0",
     "electron-store": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
